[gd_scene load_steps=15 format=3 uid="uid://cve3fu224uibk"]

[ext_resource type="Script" path="res://data/player/player.gd" id="1_u1w3t"]
[ext_resource type="PackedScene" uid="uid://cgupsmo68e4mk" path="res://scenes/arms_animation.tscn" id="2_3kahs"]
[ext_resource type="Texture2D" uid="uid://bubwl36108v2r" path="res://data/cursors/crosshair001.png" id="2_nq3sk"]
[ext_resource type="PackedScene" uid="uid://drscp48mqs1sj" path="res://scenes/sword_animation.tscn" id="2_wul0i"]

[sub_resource type="Animation" id="Animation_saxjg"]
resource_name = "head_bob"
length = 0.5
loop_mode = 1
tracks/0/type = "position_3d"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".")
tracks/0/interp = 2
tracks/0/loop_wrap = true
tracks/0/keys = PackedFloat32Array(0, 1, 0, 0, 0, 0.239392, 1, 0, -0.1, 0, 0.5, 1, 0, 0, 0)

[sub_resource type="Animation" id="Animation_1m4wq"]
resource_name = "reset"
tracks/0/type = "position_3d"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = PackedFloat32Array(0.00870516, 1, 0, 0, 0)

[sub_resource type="AnimationLibrary" id="AnimationLibrary_36ogt"]
_data = {
"head_bob": SubResource("Animation_saxjg"),
"reset": SubResource("Animation_1m4wq")
}

[sub_resource type="BoxMesh" id="BoxMesh_6ddlv"]

[sub_resource type="CapsuleShape3D" id="CapsuleShape3D_phygr"]

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_3iwsb"]
albedo_color = Color(0.917647, 0.529412, 0.168627, 1)

[sub_resource type="CapsuleMesh" id="CapsuleMesh_3oyv7"]
material = SubResource("StandardMaterial3D_3iwsb")

[sub_resource type="Animation" id="Animation_e6g13"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:rotation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector3(0.461622, 0, 0)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath(".:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector3(0.256186, -0.309559, -0.227303)]
}

[sub_resource type="Animation" id="Animation_qjh2w"]
resource_name = "swing"
length = 0.2
step = 0.01
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:rotation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.05, 0.1, 0.15, 0.2),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1),
"update": 0,
"values": [Vector3(0.461622, 0, 0), Vector3(0.461622, 0, 0), Vector3(0.3486, 0.42295, -0.0202822), Vector3(0.180524, 0.873567, -0.15382), Vector3(0.0741111, 1.17413, -0.340362)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath(".:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector3(0.256186, -0.309559, -0.227303)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_6ss64"]
_data = {
"RESET": SubResource("Animation_e6g13"),
"swing": SubResource("Animation_qjh2w")
}

[node name="player" type="CharacterBody3D" groups=["player"]]
script = ExtResource("1_u1w3t")

[node name="head" type="Node3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.6, 0)

[node name="camera" type="Camera3D" parent="head"]

[node name="projectile_spawn" type="Node3D" parent="head/camera"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, -0.842178)

[node name="camera_animation" type="AnimationPlayer" parent="head/camera"]
libraries = {
"": SubResource("AnimationLibrary_36ogt")
}

[node name="MeshInstance3D2" type="MeshInstance3D" parent="head/camera"]
transform = Transform3D(0.20298, 0, 0, 0, 0.169256, -0.439751, 0, 0.0841999, 0.883973, 0.256186, -0.309559, -0.227303)
visible = false
mesh = SubResource("BoxMesh_6ddlv")
skeleton = NodePath("../../..")

[node name="sword_animation" parent="head/camera" instance=ExtResource("2_wul0i")]
transform = Transform3D(-1, 0, 8.74228e-08, 0, 1, 0, -8.74228e-08, 0, -1, 0, -0.294, -0.426)
visible = false

[node name="arms_animation" parent="head/camera" instance=ExtResource("2_3kahs")]
transform = Transform3D(-1, 0, -8.74228e-08, 0, 1, 0, 8.74228e-08, 0, -1, 0, -0.294, -0.426)

[node name="collision" type="CollisionShape3D" parent="."]
shape = SubResource("CapsuleShape3D_phygr")

[node name="hud_camera" type="Camera2D" parent="."]

[node name="crosshair" type="Sprite2D" parent="hud_camera"]
texture = ExtResource("2_nq3sk")

[node name="MeshInstance3D" type="MeshInstance3D" parent="."]
mesh = SubResource("CapsuleMesh_3oyv7")

[node name="CooldownTimer" type="Timer" parent="."]
wait_time = 0.2
one_shot = true

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
root_node = NodePath("../head/camera/MeshInstance3D2")
libraries = {
"": SubResource("AnimationLibrary_6ss64")
}

[editable path="head/camera/arms_animation"]
